--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "lucide-react": "^0.468.0",
-    "@google/genai": "^0.22.0"
+    "lucide-react": "latest",
+    "@google/genai": "latest"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
